# draw_dot_plot

./: .gitignore  CMakeLists.txt
exe_sh/: devnet_100up_anchor.sh  ecoli_fragments.sh  human_d20.sh  tmp.sh  toy.sh
exe_sh/pbsim/ecoli/: ecoli_fragments.sh  rp_non_mini_segs.sh  v3_rp.sh
exe_sh/pbsim/human/GRCh38/sd_0044/: try_get_long_TRs.sh
exe_sh/pbsim/human/GRCh38/sd_0044/try_fetch_fw_rc_concat/: clustered_dots.sh  elim_tes_fps.sh  select_bin.sh
exe_sh/pbsim/human/T2T/depth_20/: fw_rv_NMB200up.sh
exe_sh/pbsim/human/T2T/depth_3/: fw_rv_NMB200up.sh  main_output.sh  raw_inspect.sh  try_filter.sh  try_get_long_TRs.sh
exe_sh/pbsim/human/T2T/depth_3/GT_ovlen_5000/: filt_micro.sh  gram_rp.sh  gram_seg.sh  non_mini_rp.sh  non_mini_self.sh  tmp.sh  tmp_ovl.sh  v3_rp.sh
exe_sh/pbsim/human/T2T/depth_3/GT_ovlen_5000/era1/: bunch.sh  partial_micro.sh  self_inconsis.sh  v3_rp.sh  v3_self.sh
exe_sh/pbsim/human/T2T/depth_3/GT_ovlen_5000/res_ovl_0/: rp_non_mini_segs.sh
exe_sh/pbsim/human/T2T/depth_3/TR_and_ovl/: ovl_samples.sh
exe_sh/pbsim/human/T2T/depth_3/isometric_filter/: tmp.sh  try_filter_self.sh
exe_sh/pbsim/human/T2T/depth_3/try_get_long_TR/phasing/: clear_dots.sh  no_ovl_samples.sh  ovl_samples.sh
exe_sh/pbsim/human/T2T/depth_3_sl/: rp_segs.sh
exe_sh/pbsim/human/T2T/depth_5/: main_output.sh
exe_sh/pbsim/human/T2T/depth_7/: main_output.sh
include/: DotPlot.hpp  resizer.hpp  utils.hpp
src/: main.cpp
